--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -10,5 +10,4 @@ blocks:
       jobs:
         - name: docker build
           commands:
-            - checkout
-            - docker build -t your-image .
+            - echo "test"
