--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -1,13 +1,33 @@
 version: v1.0
-name: Docker
+name: First pipeline
 agent:
   machine:
     type: e1-standard-2
     os_image: ubuntu1804
 blocks:
-  - name: Build
+  - name: Lint
     task:
+      prologue:
+        commands:
+          - checkout
       jobs:
-        - name: docker build
+        - name: make lint
           commands:
-            - echo "test"
+            - echo "lint your code"
+            - mkdir /dov
+            - ls
+  - name: Unit tests
+    task:
+      prologue:
+        commands:
+          - checkout
+      jobs:
+        - name: Unit tests 1/3
+          commands:
+            - echo "run 1/3"
+        - name: Unit tests 2/3
+          commands:
+            - echo "run 2/3"
+        - name: Unit tests 3/3
+          commands:
+            - echo "run 3/3"
